sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:25: error: ')' expected but integer literal found.
                fin-=1)
                     ^